apps/production/nemmest/route-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nemmest-route
  namespace: nemmest
spec:
  hostnames:
    - nem.fanen.dk
